contact page: responsive

--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -147,6 +147,15 @@
           color: white;
           transform: translateY(-2px);
         }
+        @media (max-width: 900px) {
+          .contact-container {
+            grid-template-columns: 1fr;
+          }
+
+          .faq-items {
+            grid-template-columns: 1fr;
+          }
+        }
 
     </style>
   </head>
