--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
       <a href="/about" class="nav-link ">About</a>
       <a href="/projects" class="nav-link ">Projects</a>
       <a href="/blog" class="nav-link ">Blog</a>
+      <a href="/ctf" class="nav-link ">CTFs</a>
       
       <a href="/contact" class="nav-link ">Contact</a>
       <a href="https://calendly.com/bavarvasneh/30min" class="nav-link" target="_blank">Calendly</a>
