added meta tag for title

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       Sneh Bavarva | Cybersecurity Professional
     </title>
     <meta
+      name="title"
+      property="og:title"
+      content="Sneh Bavarva | Cybersecurity Portfolio – OSCP, DevSecOps, and Security Researcher"
+    />
+    <meta
       name="description"
       content="Cybersecurity portfolio of Sneh Bavarva – OSCP-certified professional with hands-on experience in penetration testing, threat analysis, and DevSecOps. Seeking opportunities to contribute and grow in the cybersecurity industry.
 "
@@ -37,7 +42,6 @@
       inject();
     </script>
     <script src="/js/copy-code.js" defer></script>
-
   </head>
   <body>
     <header class="site-header">
