--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,6 +7,11 @@
       👋 About Me | Sneh Bavarva | Cybersecurity Professional
     </title>
     <meta
+      name="title"
+      property="og:title"
+      content="Sneh Bavarva | Cybersecurity Portfolio – OSCP, DevSecOps, and Security Researcher"
+    />
+    <meta
       name="description"
       content="Learn more about Sneh Bavarva&#39;s cybersecurity background and expertise"
     />
@@ -35,7 +40,6 @@
       inject();
     </script>
     <script src="/js/copy-code.js" defer></script>
-
   </head>
   <body>
     <header class="site-header">
