--- a/public/projects/cloud-security-automation/index.html
+++ b/public/projects/cloud-security-automation/index.html
@@ -7,6 +7,11 @@
       Secure CI/CD DevSecOps pipeline | Sneh Bavarva | Cybersecurity Professional
     </title>
     <meta
+      name="title"
+      property="og:title"
+      content="Sneh Bavarva | Cybersecurity Portfolio – OSCP, DevSecOps, and Security Researcher"
+    />
+    <meta
       name="description"
       content="Automated security scanning and compliance checking for code"
     />
@@ -35,7 +40,6 @@
       inject();
     </script>
     <script src="/js/copy-code.js" defer></script>
-
   </head>
   <body>
     <header class="site-header">
