--- a/public/projects/obsidian-sync-from-windows-free/index.html
+++ b/public/projects/obsidian-sync-from-windows-free/index.html
@@ -7,6 +7,11 @@
       Obsidian sync from windows | Sneh Bavarva | Cybersecurity Professional
     </title>
     <meta
+      name="title"
+      property="og:title"
+      content="Sneh Bavarva | Cybersecurity Portfolio – OSCP, DevSecOps, and Security Researcher"
+    />
+    <meta
       name="description"
       content="Free and Automated way to sync your Obsidian notes from windows to GitHub"
     />
@@ -35,7 +40,6 @@
       inject();
     </script>
     <script src="/js/copy-code.js" defer></script>
-
   </head>
   <body>
     <header class="site-header">
