Fix: Markdown links open in new tab

--- a/public/projects/eye-sint/index.html
+++ b/public/projects/eye-sint/index.html
@@ -256,7 +256,12 @@ And the best part? It’s <strong>open source</strong>, easily extendable, and b
 <p><em>“Enhancing OSINT Practices with Eye-Sint: A Multi-Module Intelligence Tool”</em><br>
 📄 Published in the <strong>Indian Journal of Natural Sciences</strong> (Vol.14 / Issue 82 / Feb 2024)</p></blockquote>
 <p>This paper explores the <strong>technical architecture</strong>, <strong>methodologies</strong>, and <strong>comparative evaluation</strong> of Eye-Sint against tools like Shodan and Maltego. We also emphasized <strong>ethical OSINT</strong>, ensuring Eye-Sint encourages responsible data usage, consent practices, and privacy considerations.</p>
-<p>🔗 <a href="https://drive.google.com/file/d/11kwNP_r4h08tmu7-3-8Lp7mAvORLIhaI/view?usp=sharing">Read the publication here (PDF)</a><br>
+<p>🔗 
+<a href="https://drive.google.com/file/d/11kwNP_r4h08tmu7-3-8Lp7mAvORLIhaI/view?usp=sharing"
+   target="_blank" rel="noopener noreferrer">
+  Read the publication here (PDF)
+</a>
+<br>
 💡 <em>Let me know if you&rsquo;d like access to the source code!</em></p>
 <div style="text-align: center; font-size: 2.5rem; margin: 1rem 0;">
     &middot; &nbsp; &middot; &nbsp; &middot;
@@ -269,8 +274,18 @@ And the best part? It’s <strong>open source</strong>, easily extendable, and b
 <p><em>“Eye-Sint is more than a project—it&rsquo;s a personal milestone that blends my passion for security, research, and open-source contribution.”</em></p></blockquote>
 <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0" />
 <h2 id="-tech-demo">💻 Tech Demo</h2>
-<p>🌐 Try it here: <a href="https://tool-frontend.onrender.com">https://tool-frontend.onrender.com</a></p>
-<p>📝 Paper: <a href="https://drive.google.com/file/d/11kwNP_r4h08tmu7-3-8Lp7mAvORLIhaI/view?usp=sharing">Research Article (PDF)</a></p>
+<p>🌐 Try it here: 
+<a href="https://tool-frontend.onrender.com"
+   target="_blank" rel="noopener noreferrer">
+  https://tool-frontend.onrender.com
+</a>
+</p>
+<p>📝 Paper: 
+<a href="https://drive.google.com/file/d/11kwNP_r4h08tmu7-3-8Lp7mAvORLIhaI/view?usp=sharing"
+   target="_blank" rel="noopener noreferrer">
+  Research Article (PDF)
+</a>
+</p>
 <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0" />
 <h2 id="-whats-next">🧠 What’s Next?</h2>
 <p>I&rsquo;m actively working on:</p>
