--- a/public/projects/one-stop-shop/index.html
+++ b/public/projects/one-stop-shop/index.html
@@ -223,8 +223,18 @@
     <div class="content markdown-content"><p>It was basically my undergrade College Project and Built a responsive e-commerce platform using MERN stack with Razorpay integration for payments. Implemented features like product filtering, user reviews, delivery instructions, and secure data stored in MongoDB.</p>
 <p>Added protections against attacks such as XSS, CSRF, Broken Auth., Path traversal, local file inclusion and more OWASP attacks</p>
 <p>it was mainly web development project but I started learning about Cybersecurity at the same time so did some secure coding practice and tested for every OWASP Top 10 and my project successfully passed every check at that time. You can check my repo for project and leave below thing as it&rsquo;s just pure GPT.</p>
-<p>🔗 <a href="https://github.com/spbavarva/one-shop-stop-backend?tab=readme-ov-file">Backend</a></p>
-<p>🔗 <a href="https://github.com/spbavarva/one-shop-stop-frontend">Frontend</a></p>
+<p>🔗 
+<a href="https://github.com/spbavarva/one-shop-stop-backend?tab=readme-ov-file"
+   target="_blank" rel="noopener noreferrer">
+  Backend
+</a>
+</p>
+<p>🔗 
+<a href="https://github.com/spbavarva/one-shop-stop-frontend"
+   target="_blank" rel="noopener noreferrer">
+  Frontend
+</a>
+</p>
 <h2 id="-one-shop-stop--secure-mern-stack-e-commerce-platform">🛍️ One Shop Stop – Secure MERN Stack E-commerce Platform</h2>
 <p><strong>One Shop Stop</strong> is a full-featured, responsive e-commerce platform built using the <strong>MERN stack</strong> (MongoDB, Express, React, Node.js). It integrates <strong>Razorpay</strong> for secure payment processing and prioritizes both functionality and security to provide a seamless user experience for customers and sellers.</p>
 <hr style="border: none; border-top: 2px solid #444; margin: 2rem 0" />
