--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -284,6 +284,14 @@
                 >📬 Subscribe to My Newsletter</a
               >
             </div>
+            <div class="link-buttons">
+              <a href="https://calendly.com/bavarvasneh/30min" target="_blank"
+                >📅 Calendly</a
+              >
+              <a href="https://topmate.io/snehbavarva" target="_blank"
+                >🚀 Topmate</a
+              >
+            </div>
           </div>
         </div>
 
