--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -286,10 +286,10 @@
             </div>
             <div class="link-buttons">
               <a href="https://calendly.com/bavarvasneh/30min" target="_blank"
-                >📅 Calendly</a
+                >Calendly</a
               >
               <a href="https://topmate.io/snehbavarva" target="_blank"
-                >🚀 Topmate</a
+                >Topmate</a
               >
             </div>
           </div>
