--- a/public/index.html
+++ b/public/index.html
@@ -471,17 +471,17 @@
           <p class="text-white mb-1">
             <span class="text-red-400">|</span>
             <b
-              ><a href="" class="text-red-400 hover:underline" target="_blank"
+              ><a href="https://www.cve.org/CVERecord?id=CVE-2025-46203" class="text-red-400 hover:underline" target="_blank"
                 >CVE-2025-46203</a
               ></b
             >
           </p>
           <ul class="list-disc list-inside text-sm text-zinc-300 ml-4">
             <li>
-              Unifiedtransform v2.X suffers from Broken Access Control, allowing
+              Unifiedtransform v2.0 suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/students/edit/{id}</code> and modify
-              student records. Affects all v2.X builds
+              student records. Affects all v2.0 builds
             </li>
           </ul>
         </div>
@@ -491,17 +491,17 @@
           <p class="text-white mb-1">
             <span class="text-red-400">|</span>
             <b
-              ><a href="" class="text-red-400 hover:underline" target="_blank"
+              ><a href="https://www.cve.org/CVERecord?id=CVE-2025-46204" class="text-red-400 hover:underline" target="_blank"
                 >CVE-2025-46204</a
               >
             </b>
           </p>
           <ul class="list-disc list-inside text-sm text-zinc-300 ml-4">
             <li>
-              Unifiedtransform v2.X suffers from Broken Access Control, allowing
+              Unifiedtransform v2.0 suffers from Broken Access Control, allowing
               students/teachers to access
               <code class="inline-code">/course/edit/{id}</code> and modify
-              course data. Affects all v2.X builds
+              course data. Affects all v2.0 builds
             </li>
           </ul>
         </div>
